--- a/css/main.css
+++ b/css/main.css
@@ -8,61 +8,122 @@ html {
   box-sizing: inherit;
 }
 
-body, main {
+body{
   background-color: #bebebe;
   margin: 0;
   padding: 0;
 }
 
-main ol {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 1rem;
-  margin: 0;
-  padding: 1rem;
-}
-
 header {
-    background-color: #bd027d;
-
+    display: grid;
+    grid-template-columns: auto 10rem auto;
+    grid-template-rows: auto 1.5rem;
+    grid-template-areas:
+      "left center right"
+      ". center .";
+    margin-bottom: 1.5rem;
 }
 
 h1 {
   margin: 0;
-  padding: 0;
-  align-items: center;
+  grid-area: center;
+  z-index: 1;
 }
 
-li {
-  margin: 1.5rem;
-  background-color: #afafaf;
-  border: 2px solid #afafaf;
-  opacity: 0.6;
+h2 {
+  font-family: "PT Sans Narrow" sans-serif;
+
 }
 
 h3 {
-  margin: 1.5rem;
-  font-weight: bold;
-  color: #000000;
+  font-family: "PT Sans Narrow" sans-serif;
+  font-style: italic;
+  text-align: center;
+  order: 1;
+  font-weight: lighter;
+  background-color: #bebebe
 }
 
+section img {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+}
 section ul {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+  list-style: none;
+  margin: 1.5rem;
+  padding: 1rem;
+}
+
+section li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background-color: #ccc;
+  border-radius: 6px;
+  border: 2px solid #afafaf;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1rem;
+  grid-template-areas:
+  "top"
+  "middle"
+  "bottom"
+}
+
+li a {
+  text-decoration: none;
+  background-color: #bd027d;
+  padding: .8rem;
+  margin: .5rem;
+  color: #fff;
+  border: 2px solid #960062;
+  border-radius: 6px;
+  font-family: "PT Sans Narrow" sans-serif;
+  font-size: 1.25rem;
 }
 
 nav ul {
   display: flex;
   flex-direction: row;
+  list-style-type: none;
   justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  margin: 0;
+  padding: 0 1rem;
 }
 
-div {
+nav {
+  grid-column: 1 / -1;
+  grid-row: 1;
+  background-color: #bd027d;
+}
+
+section div {
+  order: -3;
+  justify-self: end;
+  flex-direction: row-reverse;
+  align-items: center;
   display: flex;
+  padding: 0;
+  background-color: rgba(0, 0, 0, .1);
+  margin: 0;
+  border-radius: 1em 0 0 1em;
 }
 
+img {
+  width: 100%;
+}
 
 div img {
   max-width: 1rem;
-  order: -1;
+}
+
+section strong {
+  font-style: italic;
+  font-size: 1.125rem;
+  font-weight: normal;
 }
