Fix paddings/margins and indents

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
   box-sizing: inherit;
 }
 
-body{
+body {
   background-color: #bebebe;
   margin: 0;
   padding: 0;
@@ -21,13 +21,13 @@ main {
 }
 
 header {
-    display: grid;
-    grid-template-columns: auto 10rem auto;
-    grid-template-rows: auto 1.5rem;
-    grid-template-areas:
-      "left center right"
-      ". center .";
-    margin-bottom: 1.5rem;
+  display: grid;
+  grid-template-columns: auto 10rem auto;
+  grid-template-rows: auto 1.5rem;
+  grid-template-areas:
+    "left center right"
+    ". center .";
+  margin-bottom: 1.5rem;
 }
 
 h1 {
@@ -52,17 +52,22 @@ h3 {
   background-color: rgba(0, 0, 0, .1);
 }
 
+section {
+  padding: 1.5rem 0;
+}
+
 section img {
   grid-column: 1 / -1;
   grid-row: 1 / -1;
 }
+
 section ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 1rem;
   list-style: none;
-  margin: 1.5rem;
-  padding: 1rem;
+  margin: 0;
+  padding: 0;
 }
 
 section li {
@@ -76,9 +81,9 @@ section li {
   grid-template-columns: 1fr;
   grid-gap: 1rem;
   grid-template-areas:
-  "top"
-  "middle"
-  "bottom"
+    "top"
+    "middle"
+    "bottom";
 }
 
 li a {
@@ -110,6 +115,12 @@ nav {
   background-color: #bd027d;
 }
 
+nav a:hover,
+nav a:focus {
+  background-color: #eccee2;
+  color: #323232;
+}
+
 section div {
   grid-area: top;
   z-index: 1;
@@ -117,10 +128,10 @@ section div {
   flex-direction: row-reverse;
   align-items: center;
   display: flex;
-  padding: 0;
+  padding: 0 .5em;
   background-color: rgba(0, 0, 0, .1);
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: .5em;
+  margin-bottom: .5em;
   margin-left: 0;
   border-radius: 1em 0 0 1em;
 }
